  * debian/sysdeps/alpha.mk: fix alphaev67_rltddir.  Closes: #452890.
  * patches/localedata/locale-de_LI.diff: new locale contributed by Giacomo
    Catenazzi.  Closes: #453041.
  * debian/debhelper.in/locales-all.postinst: honor TMPDIR.  Closes: #453326.
  * patches/any/submitted-malloc_h.diff: defines __need_ptrdiff_t,
    __need_size_t and __need_NULL in malloc.h.  Closes: #453264.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Nov 2007 00:00:08 +0100

glibc (2.7-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * sysdeps/alpha.mk: define alphaev67_MIN_KERNEL_SUPPORTED to 2.6.9.
    Closes: #452890.
  * alpha/submitted-fdatasync.diff: new patch to fix fdatasync() on alpha.
    Closes: #452081.
  * debian/script.in/nohwcap.sh: add libc6-alphaev67 to the list of optimized
    packages.
  * any/cvs-tzfile.diff: new patch from CVS to fix reading version 0 timezone
    data files.  Closes: #451892.
  * debhelper.in/locales.config, debhelper.in/locales.postinst,
    rules.d/debhelper.mk: rework the maintainer scripts of locales to handle
    locales addition or removal.
  * debhelper.in/locales.config: convert no_NO into nb_NO while upgrading.
    Closes: #452788.
  * debhelper.in/locales-all.NEWS, debhlper/locales-all.NEWS: add a note
    about no_NO locale.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 26 Nov 2007 19:03:17 +0100

glibc (2.7-1) unstable; urgency=low

  [ Clint Adams ]
  * New upstream release with linuxthreads snapshot.
    - Fixes an ABBA deadlock in ld.so.  Closes: #443460.
    - Render dgettext" thread safe.  Closes: #443660.
    - Fixes CVE-2007-4840 (multiple errors in iconv
      function).  Closes: #442250.
    - Fixes strtod("-0", 0).  Closes: #448723.
    - Remove localedata/locale-de_CH.diff (merged).
    - Update locale/fix-LC_COLLATE-rules.diff.
    - Update locale/LC_COLLATE-keywords-ordering.diff.
    - Update locale/fix-C-first_weekday.diff.
    - Update locale/preprocessor-collate.diff.
    - Update localedata/locales-fr.diff.