@@ -1,3 +1,11 @@
+locales (2.7-3) unstable; urgency=low
+
+  * Starting with locales 2.7-3, users can provide their own locales in
+    /usr/local/share/i18n. See /usr/share/locales/README.Debian for 
+    more information.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu 29 Nov 2007 18:54:12 +0100
+
 locales (2.7-1) unstable; urgency=low
 
   * Starting with locales 2.7-1 the deprecated no_NO locale has been 
