@@ -5,8 +5,16 @@ set -e
 db_version 2.0
 db_capb backup multiselect
 
-# List of locales supported by the current version
-SUPPORTED_LOCALES="__SUPPORTED_LOCALES__"
+# List of locales provided by the current version
+PROVIDED_LOCALES="__PROVIDED_LOCALES__"
+
+# List of locales provided by the user
+if [ -f /usr/local/share/i18n/SUPPORTED ] ; then
+    USER_LOCALES="$(sed -e 's/#.*//g' /usr/local/share/i18n/SUPPORTED)"
+fi
+
+# List of supported locales
+SUPPORTED_LOCALES=$(echo "$PROVIDED_LOCALES$USER_LOCALES" | sed -e 's/^ *//g' -e 's/ *$//g' | sort -u | tr '\n' ',' | sed -e 's/, */, /g' -e 's/, *$//g')
 
 # Get the list of selected locales from /etc/locale.gen
 SELECTED_LOCALES=
