@@ -22,8 +22,9 @@ glibc (2.7-3) unstable; urgency=low
   * debian/debhelper.in/locales-all.postinst: honor TMPDIR.  Closes: #453326.
   * patches/any/submitted-malloc_h.diff: defines __need_ptrdiff_t,
     __need_size_t and __need_NULL in malloc.h.  Closes: #453264.
+  * support user defined locales in /usr/local/share/i18n.  Closes: #453131. 
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Nov 2007 00:00:08 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Nov 2007 18:01:03 +0100
 
 glibc (2.7-2) unstable; urgency=low
 
